--- a/test/DotNetCoreAppVeyorTest.ClassLibrary.Test/DotNetCoreAppVeyorTest.ClassLibrary.Test.csproj
+++ b/test/DotNetCoreAppVeyorTest.ClassLibrary.Test/DotNetCoreAppVeyorTest.ClassLibrary.Test.csproj
@@ -6,8 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="1.1.17" />
-    <PackageReference Include="MSTest.TestFramework" Version="1.1.17" />
+    <PackageReference Include="xunit" Version="2.3.0-beta1-build3642" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.0-beta1-build1309" />
   </ItemGroup>
 
   <ItemGroup>
